# voronoi

./: .azure-pipelines.yml  .bumpversion.cfg  .env  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-setup.txt  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
include/boost/polygon/: interval_concept.hpp  interval_data.hpp  interval_traits.hpp  isotropy.hpp  point_concept.hpp  point_data.hpp  point_traits.hpp  rectangle_concept.hpp  rectangle_data.hpp  rectangle_traits.hpp  segment_concept.hpp  segment_data.hpp  segment_traits.hpp  voronoi.hpp  voronoi_builder.hpp  voronoi_diagram.hpp  voronoi_geometry_type.hpp
src/: main.cpp  voronoi.cpp  voronoi.hpp
tests/: conftest.py  utils.py
tests/bind_tests/: hints.py  utils.py
tests/bind_tests/diagram_tests/: strategies.py  test_clear.py  test_construct.py
tests/integration_tests/: __init__.py  hints.py  utils.py
tests/integration_tests/beach_line_keys_tests/: strategies.py  test_lower_than.py  (+9 more)
tests/port_tests/: hints.py  utils.py
tests/strategies/: __init__.py  base.py
voronoi/: __init__.py  beach_line_key.py  beach_line_value.py  big_float.py  big_int.py  builder.py  cell.py  circle_event.py  diagram.py  edge.py  enums.py  events.py  faces.py  point.py  predicates.py  robust_difference.py  robust_float.py  segment.py  site_event.py  source_category.py  utils.py  vertex.py
voronoi/events/: computers.py  models.py  predicates.py
(+189 files in other folders)
